[metadata]
name = meta-critique
version = attr: version.__version__
description = Evaluate the Quality of Critique
long_description = file: README.MD
long_description_content_type = text/markdown
url = https://github.com/GAIR-NLP/MetaCritique
author = GAIR Research Group
license = Apache License
classifiers =
    Intended Audience :: Developers
    Topic :: Text Processing
    Topic :: Scientific/Engineering :: Artificial Intelligence
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = True
install_requires =
    openai==0.28.1
    asyncio==3.4.3
    tiktoken==0.4.0
    tqdm

[options.package_data]
meta_critique.prompts = *.txt

[flake8]
application-import-names = meta_critique
exclude = __pycache__, data, eval_data
extend-ignore = E203, BLK100, W503, FI10, FI11, FI12, FI13, FI14, FI15, FI16, FI17, FI58
filename = ./meta_critique/*.py, ./setup.py
max-line-length = 88

[isort]
filter_files = true
force_sort_within_sections = true
multi_line_output = 3
order_by_type = false
profile = black
src_paths = meta_critique